endpoint using tls works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=demo
+
+server.port=8443
+server.ssl.key-store=classpath:ubs-local-keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=password123
+server.ssl.key-alias=1
